<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/menuDownload"
        android:icon="@drawable/ic_baseline_cloud_download_24"
        android:title="@string/download"/>
    <item
        android:id="@+id/menuReport"
        android:icon="@drawable/ic_baseline_assignment_24"
        android:title="@string/report"/>
    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"/>
    <item
        android:id="@+id/menuAbout"
        android:icon="@drawable/ic_baseline_announcement_24"
        android:title="@string/about"/>

</menu>